--- a/Sol. TekTon/TekTon.ProductAPI.DTO/TekTon.ProductAPI.DTO.csproj
+++ b/Sol. TekTon/TekTon.ProductAPI.DTO/TekTon.ProductAPI.DTO.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.3.0" />
+    <PackageReference Include="FluentValidation" Version="11.8.0" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
